Fixed minor color and spacing issues

--- a/files/main.css
+++ b/files/main.css
@@ -52,8 +52,18 @@ width: 100%;
     border-bottom: 1px solid gray;
     border-top: 1px solid gray;
     table-layout: auto;
-    background-color: #9ec3e8;
+    background-color: #7ab8f5;
 }
+
+.colordatetable {
+  width: 100%;
+      border-collapse: separate;
+      border-spacing: 5px 5px;
+      border-bottom: 1px solid gray;
+      border-top: 1px solid gray;
+      table-layout: auto;
+      background-color: #c3e1ff;
+  }
 
 
 .indexcrimerecap_perma {
@@ -562,6 +572,7 @@ border: none;
 
 .buttonholder {
 width: 100%;
+padding-top: 5pt;
 text-align: right;
 border-top: 0px solid black;
 border-bottom: 0px solid black;
@@ -587,7 +598,6 @@ border-right: 0px solid black;
 }
 
 .delete {
-  padding-top: 1pt;
   font-family:vitesse;
   font-weight:light;
   font-size:10px;
